# Deep-Agent-Meeting-Scheduler

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: chat.py  contacts.py  meetings.py  pages.py  settings.py
app/clients/calendar/: base_calendar.py  google_calendar.py
app/core/: config.py
app/db/: seed.py  session.py
app/models/: __init__.py  models.py
app/schemas/: __init__.py  schemas.py
app/services/: chat_service.py  contact_service.py  meeting_service.py  settings_service.py
app/static/css/: calendar.css  contacts.css  meetings.css  styles.css
app/static/js/: calendar.js  contacts.js  meetings.js  script.js  settings.js
app/templates/: base.html  calendar.html  contacts.html  index.html  meetings.html  settings.html
database/: config.py  seed.py  store.py
models/: models.py  schemas.py
routers/: chat.py  contacts.py  meetings.py  pages.py
static/css/: contacts.css  settings.css  styles.css
static/js/: calendar.js  contacts.js  meetings.js  script.js
templates/: activity_logs.html  base.html  calendar.html  contacts.html  index.html  meetings.html
